// MindEase — Database Schema (DBML)
// Paste this into https://dbdiagram.io to generate the ER diagram

Table users {
  id uuid [pk, default: `gen_random_uuid()`]
  username varchar(32) [not null, unique]
  password_hash text [not null]
  created_at timestamp [not null, default: `now()`]
}

Table issue_tags {
  id uuid [pk, default: `gen_random_uuid()`]
  name varchar(64) [not null, unique]
}

Table counsellors {
  id uuid [pk, default: `gen_random_uuid()`]
  display_name varchar(64) [not null]
  bio text
  is_available integer [not null, default: 1]
  created_at timestamp [not null, default: `now()`]
}

Table counsellor_tags {
  counsellor_id uuid [not null]
  issue_tag_id uuid [not null]
  Indexes {
    (counsellor_id, issue_tag_id) [pk]
  }
}

Table sessions {
  id uuid [pk, default: `gen_random_uuid()`]
  user_id uuid [not null]
  counsellor_id uuid [not null]
  issue_tag_id uuid [not null]
  status session_status [not null, default: 'pending']
  created_at timestamp [not null, default: `now()`]
}

Table session_credits {
  id uuid [pk, default: `gen_random_uuid()`]
  user_id uuid [not null, unique]
  balance integer [not null, default: 1]
}

Table messages {
  id uuid [pk, default: `gen_random_uuid()`]
  session_id uuid [not null]
  sender_role sender_role [not null]
  sender_id uuid [not null]
  content text [not null]
  created_at timestamp [not null, default: `now()`]
}

// Enums
Enum session_status {
  pending
  active
  completed
  cancelled
}

Enum sender_role {
  user
  counsellor
}

// Relationships
Ref: counsellor_tags.counsellor_id > counsellors.id [delete: cascade]
Ref: counsellor_tags.issue_tag_id > issue_tags.id [delete: cascade]

Ref: sessions.user_id > users.id [delete: cascade]
Ref: sessions.counsellor_id > counsellors.id [delete: cascade]
Ref: sessions.issue_tag_id > issue_tags.id

Ref: session_credits.user_id > users.id [delete: cascade]

Ref: messages.session_id > sessions.id [delete: cascade]
